# trend-pulse

./: .gitignore  Makefile
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/data/eval/: .gitignore  clusters.sample.csv  posts.sample.csv  real_judged.sample.csv
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_auth.py  0003_alert_unique.py  0004_alert_delivery.py  0005_billing.py  0006_alerts_user_first_seen_index.py  0007_scoring_correctness.py  0008_alerts_status_first_seen_index.py  0009_subscription_reminder_window.py  0010_api_keys.py  0011_watchlist_pack_slug.py  0012_alert_deliver_after.py  0013_alert_feedback.py  0014_watchlist_threshold_floor.py  0015_showcase_posts.py  0016_showcase_cases.py  0017_referrals.py  0018_business_metrics_daily.py  0019_field_encryption.py  0020_scores_channels_count.py  0021_billing_payment_url.py  0022_users_lifecycle_emails.py  0023_cluster_feature_snapshots.py  0024_pool_sessions.py  0025_scores_effective_sources.py  0026_pool_sessions_proxy.py  0027_pool_sessions_source.py  0028_factory_accounts.py  0029_factory_proxy_lease_id.py
backend/scripts/: backtest_harness.py  case_mainstream.py  dump_openapi.py  eval_gate.py  export_corpus.sh  export_real_judged.sh  meaningfulness_eval.py  quality_report.py  referral_paid.py  superuser_grant.py  verify_proxy_live.py  verify_registration_live.py  verify_rent_live.py
backend/src/: celery_app.py  config.py  scheduler.py  textutils.py
backend/src/alerts/: __init__.py  backends.py  constants.py  errors.py  feedback_tokens.py  formatting.py  notifier.py  security.py  tasks.py
backend/src/analytics/: __init__.py  aggregate.py  constants.py  money.py  tasks.py
backend/src/api/: deps.py  errors.py  main.py  rate_limit.py
backend/src/api/account/: __init__.py  delivery_config.py  schemas.py
backend/src/api/alerts/: __init__.py  router.py  schemas.py  service.py
backend/src/api/api_keys/: __init__.py  constants.py  router.py  schemas.py  service.py
backend/src/api/auth/: __init__.py  api_key.py  backend.py  captcha.py  me.py  oauth.py  schemas.py  users.py  verify_login.py
backend/src/api/cases/: __init__.py  router.py  schemas.py  service.py
backend/src/api/feedback/: router.py
backend/src/api/packs/: __init__.py  data.py  router.py  schemas.py  service.py
backend/src/api/referral/: __init__.py  router.py  schemas.py
backend/src/api/routes/: __init__.py  account.py  email_unsubscribe.py  factory.py  ops.py  ops_business.py  pool_admin.py
backend/src/api/security/: __init__.py  csrf.py
backend/src/billing/: __init__.py  constants.py  deps.py  limits.py  notifications.py  plans.py  router.py  service.py  tasks.py  webhook.py
backend/src/collector/: __init__.py  base.py  buffer.py  constants.py  errors.py  locks.py  registry.py  tasks.py
backend/src/compliance/: __init__.py  account.py  constants.py  retention.py  tasks.py
backend/src/eval/: __init__.py  clustering_audit.py  corpus.py  distribution.py  forward_split.py  metrics.py  online_gate.py  quality.py  scenarios.py  science_features.py  scoring_replay.py  signal_value.py
backend/src/factory/: __init__.py  constants.py  errors.py  service.py  tasks.py
backend/src/notifications/: __init__.py  constants.py  email.py  lifecycle.py  tasks.py
backend/src/observability/: __init__.py  alert_status.py  celery_logging.py  constants.py  context.py  logging.py  middleware.py  pool_health.py  sentry.py  signal_latency.py  tasks.py
backend/src/pipeline/: __init__.py  batch_processor.py  constants.py  locks.py  tasks.py
backend/src/referral/: __init__.py  service.py
backend/src/scorer/: __init__.py  adaptation.py  attribution.py  categorize.py  constants.py  feature_snapshots.py  headline.py  independence.py  noise_filter.py  score.py  signal_payload.py  tasks.py  viral_model.py
backend/src/showcase/: __init__.py  cases.py  constants.py  formatting.py  selection.py  sender.py  tasks.py
backend/src/storage/: __init__.py  database.py  encryption.py  factory_account_store.py  pool_session_store.py  redis_client.py
backend/src/trendpulse/: __init__.py  celery_app.py  config.py  scheduler.py
backend/tests/: conftest.py
backend/tests/integration/: test_account_cascade.py  test_alert_delivery.py  test_alerts_api.py  test_api_keys_api.py  test_api_versioning.py  test_at_rest_encryption.py  test_auth_flow.py  test_auth_reset.py  test_auth_verify.py  test_billing_ipn_route.py  test_business_metrics_daily.py  test_cases_api.py  test_celery_tasks.py  test_csrf_origin.py  test_delivery_config.py  test_email_delivery.py  test_engagement_baseline.py  test_error_envelope.py  test_factory_account_store.py  test_factory_api.py  test_factory_tick.py  test_feature_snapshot_capture.py  test_feedback_api.py  test_lifecycle_emails.py  test_migrations.py  test_ops_business_metrics.py  test_packs_api.py  test_pool_admin_api.py  test_pool_session_store.py  test_referral_flow.py  test_reliability.py  test_renewal_notifications.py  test_repositories.py  test_run_batch.py  test_scorer_alerts.py  test_showcase_autopost.py  test_signal_latency.py  test_trending_api.py  test_users_me.py  test_watchlist_api.py  (+1 more)
backend/tests/unit/: test_account_delete.py  test_alert_precision.py  test_alert_rate_guard.py  test_api_keys.py  test_attribution.py  test_auth.py  test_batch_processor.py  test_billing_gateway_dualverify.py  test_billing_invoice.py  test_billing_ipn.py  test_billing_limits.py  test_billing_webhook.py  test_categorize.py  test_celery_config.py  test_cluster.py  test_config_validators.py  test_dedup.py  test_email.py  test_embed.py  test_embed_cache.py  test_headline.py  test_health.py  test_independence.py  test_locks.py  test_log_hygiene.py  test_models.py  test_noise_filter.py  test_normalize.py  test_packs_catalog.py  test_platform_independent.py  test_qr_login.py  test_rate_limit.py  test_ready.py  test_renewal_windows.py  test_request_id.py  test_resweep.py  test_retention_purge.py  test_run_user_batch.py  test_scheduler.py  test_score.py  (+12 more)
(+999 files in other folders)
