[project]
name = "trendpulse"
version = "0.1.0"
description = "TrendPulse backend — personal viral-content detector for Telegram (FastAPI + Celery + pgvector)"
requires-python = "==3.12.*"
# Core deps — MUST allow api/worker/beat to boot WITHOUT the ML stack (torch).
# The heavy embedding stack (sentence-transformers → torch ~2GB) lives in the
# opt-in `ml` dependency-group below, never on the critical boot path.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "celery[redis]>=5.4,<6",
    "redis>=5.2,<6",
    "sqlalchemy>=2.0,<3",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "telethon>=1.37,<2",
    "datasketch>=1.6,<2",
    "imagehash>=4.3,<5",
    "pillow>=11,<12",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "fastapi-users[sqlalchemy]>=15,<16",
    "httpx-oauth>=0.17,<1",
    "python-json-logger>=3.1,<5",
    "slowapi>=0.1.9,<1",
    "sentry-sdk>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Flat src layout: map everything under src/ to the wheel root so the modules
# install as top-level imports (api, storage, config, celery_app, scheduler) —
# matching the on-host editable/sys.path layout (alembic prepend_sys_path = src).
[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src"]

[dependency-groups]
# PEP 735 dependency-groups. `uv sync` installs groups listed in
# [tool.uv] default-groups below. `ml` is intentionally NOT a default group so
# torch stays off the api/worker image's critical boot path; install it
# explicitly with `uv sync --group ml` (wired into the worker in a later task).
ml = [
    "sentence-transformers>=3.3,<4",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "aiosqlite>=0.20,<1",
    "fakeredis>=2.26,<3",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
    "celery-types>=0.22",
]

[tool.uv]
# Only `dev` is synced by default → CI tooling (ruff/mypy/pytest) is present and
# the api/worker image (built via `uv sync --frozen`) stays lean (no torch).
# `ml` is opt-in: `uv sync --group ml`.
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "TID"]
# B008: calling `Depends(...)`/`Security(...)` in argument defaults is the canonical
# FastAPI / fastapi-users dependency-injection idiom (the call is a marker, not eager
# evaluation), so the check is a false positive for this stack.
extend-ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require live infra (postgres/redis) on a running stack",
]
addopts = "--strict-markers -ra"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
# Flat src layout: check the source packages + top-level modules (the previous
# config checked the single `trendpulse` package; this preserves that scope —
# src only, tests excluded). `mypy_path = src` + `explicit_package_bases` make
# src/ the import root so the flat top-level names resolve without a parent pkg.
packages = ["api", "alerts", "billing", "collector", "compliance", "observability", "pipeline", "scorer", "storage", "config", "celery_app", "scheduler"]
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = true
# The pydantic plugin teaches mypy that `BaseSettings` fields are populated from
# the environment, so `Settings()` with no args is valid even for fields without a
# source default (AC6 fail-fast fields). Without it mypy reports false `call-arg`s.
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# pgvector ships without a py.typed marker / stubs; treat its imports as untyped
# at the boundary instead of scattering `# type: ignore` (CONVENTIONS: no ignores).
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

# httpx_oauth ships without type stubs; scope the missing-import allowance to it
# instead of inline `# type: ignore` (CONVENTIONS: no ignores). fastapi-users is
# fully typed (ships py.typed) and is NOT listed here.
[[tool.mypy.overrides]]
module = "httpx_oauth.*"
ignore_missing_imports = true

# telethon ships without type stubs / py.typed; scope the missing-import allowance
# to it (it is referenced only lazily inside the collector) instead of inline
# `# type: ignore` (CONVENTIONS: no ignores). The platform-independent core
# (collector/base.py) never imports it.
[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

# datasketch (MinHash, dedup step) ships without type stubs / py.typed; scope the
# missing-import allowance to it instead of inline `# type: ignore` (CONVENTIONS).
[[tool.mypy.overrides]]
module = "datasketch.*"
ignore_missing_imports = true

# sentence-transformers (embedding model) is the heavy `ml`-group dep, imported
# LAZILY inside the embed step (never at module import); it ships without type
# stubs, so scope the missing-import allowance here instead of inline ignores.
[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
# Named threshold — must match the gate in `make test-cov` and PR-workflow.
fail_under = 80
show_missing = true
